--- a/css/options.css
+++ b/css/options.css
@@ -6,7 +6,7 @@ html {
     display: table;
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     background-color: LightCyan;
 }
 
@@ -41,4 +41,9 @@ input {
 
 #save {
     float: right;
+}
+
+#status {
+    color: darkgreen;
+    font-weight: bold;
 }
